@@ -11,4 +11,5 @@ exportMethods( new )
 
 importFrom( utils, .DollarNames )
 S3method( .DollarNames, "C++ObjectS3" )
+S3method( .DollarNames, "Module" )
 
